--- a/src/main/resources/templates/myPage/preference.html
+++ b/src/main/resources/templates/myPage/preference.html
@@ -44,7 +44,7 @@
         <div class="row">
           <!-- 카테고리 선택 영역 -->
           <div class="col-md-6">
-            <div class="category-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
+            <div class="category-container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
               <div class="row mb-3">
                 <div class="col-12">
                   <div class="card sticky-card">
@@ -87,7 +87,7 @@
 
           <!-- 취향 선택 영역 -->
           <div class="col-md-6">
-            <div class="preference-container container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
+            <div class="preference-container mt-3 mb-3 pb-3 pt-3 bg-light rounded shadow">
               <div class="row mb-3">
                 <div class="col-12">
                   <div class="card sticky-card">
